--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -115,17 +115,17 @@ unset URLGRABBER_DEBUG``
 
 
 
-== Register {rhel} Salt Clients
+== Register {rhel} Clients
 
 
-Before you register {rhel} Salt clients to your {productname} Server, check that you have the corresponding {rhel} product enabled, and the required channels are fully synchronized.
+Before you register {rhel} clients to your {productname} Server, check that you have the corresponding {rhel} product enabled, and the required channels are fully synchronized.
 
 You will also need an activation key associated with the {rhel} channel.
 For more information on activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[].
 
 [IMPORTANT]
 ====
-Missing packages will cause your registtration to fail.
+Missing packages will cause your registration to fail.
 For {rhel} clients, packages are contained on the {rhel} installation media.
 Ensure you have loop-mounted the installation media, and added it as a child channel to the base {rhel} channel.
 ====
@@ -151,7 +151,7 @@ If you use this method, remember that base channels can contain multiple child c
 Each of the child channels will generate its own log during the synchronization progress.
 You will need to check all the base and child channel log files to be sure that the synchronization is complete.
 
-When you are ready to register your {rhel} Salt client, follow the instructions in xref:client-configuration:registration-overview.adoc[].
+When you are ready to register your {rhel} client, follow the instructions in xref:client-configuration:registration-overview.adoc[].
 
 
 
