--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -1,8 +1,8 @@
 [[clients-centos]]
-= Managing {centos} Clients
+= Registering {centos} Clients
 
 
-This section contains information about managing traditional and Salt clients running {centos} operating systems.
+This section contains information about registering traditional and Salt clients running {centos} operating systems.
 
 
 
