--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -1,9 +1,10 @@
 [[clients-rh]]
-= Managing {rhel} Clients
+= Registering {rhel} Clients
 
 
-This section contains information about managing traditional and Salt clients running {rhel} operating systems.
+This section contains information about registering traditional and Salt clients running {rhel} operating systems.
 
+ 
 
 
 == Set up a {rhel} Client
