--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,13 +1,14 @@
 [[clients-ubuntu]]
-= Ubuntu Clients
+= Registering {ubuntu} Clients
 
+
+This section contains information about registering Salt clients running {ubuntu} operating systems.
 
 Support for {ubuntu} Clients was added in {susemgr} 3.2.
-Currently, Salt clients running {ubuntu} 16.04 LTS and 18.04 LTS are supported.
 
 [NOTE]
 ====
-{ubuntu} clients must be Salt clients.
+Salt clients running {ubuntu} 16.04 LTS and 18.04 LTS are supported.
 Traditional clients are not supported.
 ====
 
