Trouble shooting cleanup (#629)
* cleanup
* edits for clarity
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/administration/pages/tshoot-intro.adoc
+++ b/modules/administration/pages/tshoot-intro.adoc
@@ -14,21 +14,20 @@ These reports can be helpful for taking inventory of your entitlements, subscrib
 Using reports is often simpler than gathering information manually from the {susemgr} {webui}, especially if you have many systems under management.
 
 .[package]``spacewalk-reports`` Package
-NOTE: To use spacewalk-report, you must have the [package]``spacewalk-reports`` package installed.
+NOTE: To use [command]``spacewalk-report``, you must have the [package]``spacewalk-reports`` package installed.
 
-[command]``spacewalk-report`` allows administrators to organize and display reports about content, systems, and user resources across {susemgr}.
+[command]``spacewalk-report`` allows administrators to organize and display reports about content, systems, and user resources across {productname}.
 Using [command]``spacewalk-report``, you can receive reports on:
 
-. System Inventory: lists all of the systems registered to {susemgr}.
-. Entitlements: lists all organizations on {susemgr}, sorted by system or channel entitlements.
+. System Inventory: lists all of the systems registered to {productname}.
+. Entitlements: lists all organizations on {productname}, sorted by system or channel entitlements.
 . Patches: lists all the patches relevant to the registered systems and sorts patches by severity, as well as the systems that apply to a particular patch.
-. Users: lists all the users registered to {susemgr} and any systems associated with a particular user.
+. Users: lists all the users registered to {productname} and any systems associated with a particular user.
 
-[command]``spacewalk-report`` allows administrators to organize and display reports about content, systems, and user resources across {susemgr}.
-To get the report in CSV format, run the following at the command line of your {susemgr} server.
+To get the report in CSV format, run the following at the command line of your {productname} Server.
 
 ----
-spacewalk-report report_name
+spacewalk-report <report_name>
 ----
 
 The following reports are available:
@@ -43,9 +42,9 @@ The following reports are available:
 | Channel Report | [command]``channels`` | Detailed report of a given channel.
 | Cloned Channel Report | [command]``cloned-channels`` | Detailed report of cloned channels.
 | Custom Info | [command]``custom-info`` | System custom information.
-| Entitlements | [command]``entitlements`` | Lists all organizations on SUSE Manager with their system or channel entitlements.
+| Entitlements | [command]``entitlements`` | Lists all organizations on {productname} with their system or channel entitlements.
 | Patches in Channels | [command]``errata-channels`` | Lists of patches in channels.
-| Patches Details | [command]``errata-list`` | Lists all patches that affect systems registered to SUSE Manager.
+| Patches Details | [command]``errata-list`` | Lists all patches that affect systems registered to {productname}.
 | All patches | [command]``errata-list-all`` | Complete list of all patches.
 | Patches for Systems | [command]``errata-systems`` | Lists applicable patches and any registered systems that are affected.
 | Host Guests | [command]``host-guests`` | List of host-guests mapping.
@@ -62,7 +61,7 @@ The following reports are available:
 | Systems in System Groups | [command]``system-groups-systems`` | List of systems in system groups.
 | System Groups Users | [command]``system-groups-users`` | Report of system groups users.
 | Installed Packages | [command]``system-packages-installed`` | List of packages installed on systems.
-| Users in the System | [command]``users`` | Lists all users registered to SUSE Manager.
+| Users in the System | [command]``users`` | Lists all users registered to {productname}.
 | Systems administered | [command]``users-systems`` | List of systems that individual users can administer.
 |===
 
