--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -1,35 +1,61 @@
 [[troubleshooting-osad-jabberd]]
 = Troubleshooting OSAD and jabberd
 
+////
+PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
+
+Troubleshooting format:
+
+One sentence each:
+Cause: What created the problem?
+Consequence: What does the user see when this happens?
+Fix: What can the user do to fix this problem?
+Result: What happens after the user has completed the fix?
+
+If more detailed instructions are required, put them in a "Resolving" procedure:
+.Procedure: Resolving Widget Wobbles
+. First step
+. Another step
+. Last step
+////
+
+
 
 == Open File Count Exceeded
 
-``SYMPTOMS``: OSAD clients cannot contact the SUSE Manager Server, and jabberd requires long periods of time to respond on port 5222.
-
-``CAUSE``: The number of maximum files that a jabber user can open is lower than the number of connected clients.
+The number of maximum files that a jabber user can open is lower than the number of connected clients.
+OSAD clients cannot contact the SUSE Manager Server, and jabberd requires long periods of time to respond on port 5222.
 Each client requires one permanently open TCP connection and each connection requires one file handler.
-The result is jabberd begins to queue and refuse connections.
 
-``CURE``: Edit the [path]``/etc/security/limits.conf``
- to something similar to the following: `jabbersoftnofile<#clients + 100>
-    jabberhardnofile<#clients + 1000>`
+To resolve OSAD connection problems, edit such lines in [path]``/etc/security/limits.conf``:
 
-This will vary according to your setup.
-For example in the case of 5000 clients: `jabbersoftnofile5100 jabberhardnofile6000`
+----
+jabber   soft   nofile   <#clients + 100>
+jabber   hard   nofile   <#clients + 1000>
+----
 
-Ensure you update the [path]``/etc/jabberd/c2s.xml``
- max_fds parameter as well.
+Itwill vary according to your setup.
+For example, in the case of 5000 clients:
+
+----
+jabber   soft   nofile   5100
+jabber   hard   nofile   6000
+----
+
+Ensure you also update the `max_fds` parameter in [path]``/etc/jabberd/c2s.xml``.
 For example: `<max_fds>6000</max_fds>`
 
-``EXPLANATION``: The soft file limit is the limit of the maximum number of open files for a single process.
-In SUSE Manager the highest consuming process is c2s, which opens a connection per client.
+The soft file limit is the limit of the maximum number of open files for a single process.
+In {productname} the highest consuming process is c2s, which opens a connection per client.
 100 additional files are added, here, to accommodate for any non-connection file that c2s requires to work correctly.
 The hard limit applies to all processes belonging to the jabber user, and accounts for open files from the router, s2s and sm processes additionally.
 
+
+
 == jabberd Database Corruption
 
-``SYMPTOMS``: After a disk is full error or a disk crash event, the jabberd database may have become corrupted.
-jabberd may then fail to start during spacewalk-service start:
+``SYMPTOMS``: After _a disk is full error_ or a _disk crash event_, the [systemitem]``jabberd`` database may have become corrupted.
+[systemitem]``jabberd`` may then fail starting Spacewalk services:
 
 ----
 Starting spacewalk services...
@@ -39,8 +65,7 @@ Starting spacewalk services...
    Terminating jabberd processes...
 ----
 
-
-/var/log/messages shows more details:
+[path]``/var/log/messages`` shows more details:
 
 ----
 jabberd/sm[31445]: starting up
@@ -50,29 +75,35 @@ jabberd/sm[31445]: db: corruption detected! close all jabberd processes and run 
 jabberd/router[31437]: shutting down
 ----
 
-``CURE``: Remove the jabberd database and restart.
-Jabberd will automatically re-create the database:
+``CURE``: Remove the [systemitem]``jabberd`` database and restart.
+[systemitem]``jabberd`` will automatically re-create the database.
+Enter at the command prompt:
 
 ----
 spacewalk-service stop
- rm -Rf /var/lib/jabberd/db/*
- spacewalk-service start
+rm -rf /var/lib/jabberd/db/*
+spacewalk-service start
 ----
 
+//   ke, 2019-08-08: not sure whether we want this here:
 
+////
 An alternative approach would be to test another database, but SUSE Manager does not deliver drivers for this:
 
 ----
 rcosa-dispatcher stop
- rcjabberd stop
- cd /var/lib/jabberd/db
- rm *
- cp /usr/share/doc/packages/jabberd/db-setup.sqlite .
- sqlite3 sqlite.db < db-setup.sqlite
- chown jabber:jabber *
- rcjabberd start
- rcosa-dispatcher start
+rcjabberd stop
+cd /var/lib/jabberd/db
+rm *
+cp /usr/share/doc/packages/jabberd/db-setup.sqlite .
+sqlite3 sqlite.db < db-setup.sqlite
+chown jabber:jabber *
+rcjabberd start
+rcosa-dispatcher start
 ----
+////
+
+
 
 == Capturing XMPP Network Data for Debugging Purposes
 
@@ -81,19 +112,59 @@ If you are experiencing bugs regarding OSAD, it can be useful to dump network me
 The following procedures provide information on capturing data from both the client and server side.
 
 .Procedure: Server Side Capture
-. Install the [package]#tcpdump# package on the SUSE Manager Server as root: [command]``zypper in tcpdump ``
-. Stop the OSA dispatcher and Jabber processes with [command]``rcosa-dispatcher stop`` and [command]``rcjabberd stop.``
-. Start data capture on port 5222: [command]``tcpdump -s 0 port 5222 -w server_dump.pcap``
-. Start the OSA dispatcher and Jabber processes: [command]``rcosa-dispatcher start`` and [command]``rcjabberd start``.
-. Open a second terminal and execute the following commands: [command]``rcosa-dispatcher start`` and [command]``rcjabberd start``.
-. Operate the SUSE Manager server and clients so the bug you formerly experienced is reproduced.
-. Once you have finished your capture re-open terminal 1 and stop the capture of data with: kbd:[CTRL+c]
+. Install the [package]#tcpdump# package on the server as root:
++
 
+----
+zypper in tcpdump
+----
+. Stop the OSA dispatcher and Jabber processes:
++
+
+----
+rcosa-dispatcher stop
+rcjabberd stop
+----
+. Start data capture on port 5222:
++
+
+----
+tcpdump -s 0 port 5222 -w server_dump.pcap
+----
+. Open a second terminal and start the OSA dispatcher and Jabber processes:
++
+
+----
+rcosa-dispatcher start
+rcjabberd start
+----
+. Operate the server and clients so the bug you formerly experienced is reproduced.
+. When you have finished your capture re-open the first terminal and stop the data capture with kbd:[CTRL+c].
 
 .Procedure: Client Side Capture
-. Install the tcpdump package on your client as root: [command]``zypper in tcpdump``
-. Stop the OSA process: [command]``rcosad stop``.
-. Begin data capture on port 5222: [command]``tcpdump -s 0 port 5222 -w client_client_dump.pcap``
-. Open a second terminal and start the OSA process: [command]``rcosad start``
-. Operate the SUSE Manager server and clients so the bug you formerly experienced is reproduced.
-. Once you have finished your capture re-open terminal 1 and stop the capture of data with: kbd:[CTRL+c]
+. Install the tcpdump package on your client as root:
++
+
+----
+zypper in tcpdump
+----
+. Stop the OSA process:
++
+
+----
+rcosad stop
+----
+. Begin data capture on port 5222:
++
+
+----
+tcpdump -s 0 port 5222 -w client_client_dump.pcap
+----
+. Open a second terminal and start the OSA process:
++
+
+----
+rcosad start
+----
+. Operate the server and clients so the bug you formerly experienced is reproduced.
+. When you have finished your capture re-open the first terminal and stop the data capture with kbd:[CTRL+c].
