--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -25,7 +25,7 @@ In addition, be aware of these considerations:
 * The {productname} setup procedure performs a forward-confirmed reverse DNS lookup.
 This must succeed in order for the setup procedure to complete successfully and for {productname} to operate as expected.
 Therefore, it is important to perform hostname and IP configuration prior to running the {productname} setup procedure.
-* {productname} server and proxy instances are expected to run in a network configuration that provides you control over DNS entries, but cannot access the wider internet.
+* {productname} Server and Proxy instances are expected to run in a network configuration that provides you control over DNS entries, but cannot access the wider internet.
 Within this network configuration DNS resolution must be provided: `hostname -f` must return the fully-qualified domain name (FQDN).
 DNS resolution is also important for connecting clients.
 DNS is dependent on the cloud framework you choose, refer to the cloud service provider documentation for detailed instructions.
@@ -128,7 +128,7 @@ Therefore, if the setup procedure is interrupted or ends with an error, it is no
 These methods are likely to result in a faulty {productname} installation.
 If you experience errors during setup, start a new instance, and begin the setup procedure again on a clean system.
 
-If you receive a message that there is not enough space available for setup, ensure that your root volume is at least 20GB and double check that the instructions in <<using-separate-storage-volume>> have been completed correctly.
+If you receive a message that there is not enough space available for setup, ensure that your root volume is at least 20 GB and double check that the instructions in <<using-separate-storage-volume>> have been completed correctly.
 
 {productname} Server for the public cloud comes with a bootstrap data module pre-installed.
 The bootstrap module contains optimized package lists for bootstrapping instances started from {sle} images published by {suse}.
