Add proper link text
Add proper link text

--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -51,7 +51,7 @@ Using Salt is the default.
 // Enable Remote Configuration
 // Enable Remote Commands
 For more information about bootstrap scripts, see
-xref:client-configuration:registration-bootstrap.adoc[].
+xref:client-configuration:registration-bootstrap.adoc[Registering Clients with a Bootstrap Script].
 +
 
 .Modifying Bootstrap Script
