--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -66,3 +66,6 @@ In order to use the {webui} to manage your {susemgr} environment, you will need 
 * Latest Firefox browser shipped with {slsa}
 * Latest Chrome browser on all operating systems
 * Latest Edge browser shipped with Windows
+
+Windows Internet Explorer is not supported.
+The {productname} {webui} will not render correctly under Windows Internet Explorer.
