Channels & move activation keys in nav

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -6,6 +6,7 @@ ifndef::backend-pdf[]
 ** xref:manual-registration-overview.adoc[Registration Overview]
 *** xref:registration-webui.adoc[Registering with the Web UI]
 *** xref:registration-bootstrap.adoc[Registering with Bootstrap]
+*** xref:clients-and-activation-keys.adoc[Activation Keys]
 // Clients on a Proxy
 ** xref:client-proxy.adoc[Registering Clients on a Proxy]
 *** xref:salt-client-proxy.adoc[Registering with the Web UI on a Proxy]
@@ -27,7 +28,6 @@ ifndef::backend-pdf[]
 *** xref:virt-vmware.adoc[Virtualization with VMWare]
 *** xref:virt-file.adoc[Virtualization with Other Hosts]
 //  Client Admin Tasks
-** xref:clients-and-activation-keys.adoc[Activation Keys]
 ** xref:channels.adoc[Channels]
 ** xref:creating-a-tools-repository.adoc[Creating a Tools Repository]
 ** xref:contact-methods.adoc[Client Contact Methods]
@@ -55,6 +55,8 @@ include::modules/client-configuration/pages/manual-registration-overview.adoc[le
 include::modules/client-configuration/pages/registration-webui.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/registration-bootstrap.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/clients-and-activation-keys.adoc[leveloffset=+2]
 
 // Clients on a Proxy
 
@@ -96,9 +98,6 @@ include::modules/client-configuration/pages/virt-vmware.adoc[leveloffset=+2]
 include::modules/client-configuration/pages/virt-file.adoc[leveloffset=+2]
 
 // Client Admin Tasks
-
-include::modules/client-configuration/pages/clients-and-activation-keys.adoc[leveloffset=+1]
-
 include::modules/client-configuration/pages/channels.adoc[leveloffset=+1]
 
 include::modules/client-configuration/pages/creating-a-tools-repository.adoc[leveloffset=+1]
