Tools repository & ifeval

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -29,7 +29,9 @@ ifndef::backend-pdf[]
 *** xref:virt-file.adoc[Virtualization with Other Hosts]
 //  Client Admin Tasks
 ** xref:channels.adoc[Channels]
+ifeval::[{suma-content} == true]
 ** xref:creating-a-tools-repository.adoc[Creating a Tools Repository]
+endif::[]
 ** xref:contact-methods.adoc[Client Contact Methods]
 ** xref:using-ssm.adoc[Using the System Set Manager]
 // Troubleshooting
