Tuning: SUSE customers should contact Consulting

--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -16,7 +16,7 @@ Monitor performance before and after each change, and revert any steps that do n
 ifeval::[{suma-content} == true]
 [WARNING]
 ====
-We strongly recommend that you contact SUSE Support and SUSE Consulting for assistance with tuning.
+We strongly recommend that you contact SUSE Consulting for assistance with tuning.
 
 SUSE will not provide support for catastrophic failure when these advanced parameters are modified without consultation.
 ====
