--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -3,7 +3,7 @@
 
 
 Some public cloud environments provide images for {productname} Server and Proxy.
-This section discusses what you will require to run {productname} in a public cloud, and how to set up your installation.
+This section discusses what you will need for running {productname} in a public cloud, and how to set up your installation.
 
 [NOTE]
 ====
@@ -237,6 +237,7 @@ After logging in through the {productname} Server {webui}, *change* the default 
 It can be managed through its parent {productname} Server.
 
 
+
 [[using-separate-storage-volume]]
 === Using Separate Storage Volume
 
@@ -254,11 +255,11 @@ For sizing information refer to https://www.suse.com/support/kb/doc.php?id=70150
 ----
 $ hwinfo --disk | grep -E "Device File:"
 ----
-. With the device name at hand the process of re-linking the directories in the filesystem {productname} uses to store data is handled by the suma-webui-storage script. In the following example we use [path]``/dev/sdb`` as the device name.
+. With the device name at hand the process of re-linking the directories in the filesystem {productname} uses to store data is handled by the suma-storage script. In the following example we use [path]``/dev/sdb`` as the device name.
 +
 
 ----
-$ /usr/bin/suma-webui-storage /dev/sdb
+$ /usr/bin/suma-storage /dev/sdb
 ----
 +
 After the call all database and repository files used by SUSE Manager Server are moved to the newly created xfs based storage.
