--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -23,6 +23,12 @@ If you check this option, the client will be configured to use SSH for its conne
 When the bootstrap process has completed, your client will be listed at menu:Systems[System List].
 
 
+[WARNING]
+====
+When new packages or updates are installed on the client using {productname}, any end user license agreements (EULAs) are automatically accepted.
+To review a package EULA, open the package detail page in the {webui}.
+====
+
 ////
 Old content below this line.
 No longer a recommended install method, as per BZ#1131398. LKB 2019-04-05
